--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -200,8 +200,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/commun.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/main.js') }}"></script> -->
     
     <!-- Scripts spécifiques aux étapes -->
     {# Étape 1 a son script inline dans le template #}
